force-app/main/default/objects/PricebookEntry/fields/Product_Active__c.field-meta.xml
<CustomField>
    <fullName>Product_Active__c</fullName>
    <formula>Product2.IsActive</formula>
    <label>Product Active?</label>
    <type>Checkbox</type>
</CustomField>