force-app/main/default/objects/PricebookEntry/fields/Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Frequency__c</fullName>
    <formula>TEXT(Product2.Subscription_Frequency__c)</formula>
    <label>Subscription Frequency</label>
    <type>Text</type>
</CustomField>